--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cellspacing="20">
       <tr>
         <td>
-          <img height="200" src="Images/profile.png" alt="">
+          <img height="200" src="https://github.com/darakelyan/cv/blob/main/Images/Profile.png?raw=true" alt="">
         </td>
         <td>
           <h1>David Arakelyan</h1>
